[package]
name = "hearth"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3.0"
futures = "0.3" # Needed by reqwest's stream feature
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
serde_json5 = "0.1"
config = "0.15.7"
thiserror = "2.0.11"
async-trait = "0.1.86"

# Action macros
action_macros = { path = "action_macros" }
ctor = "0.3.6"

[dev-dependencies]
mockito = "1.6.1"
test-log = { version = "0.2.17", features = ["trace"] }
