[package]
name = "hearth"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
futures = "0.3" # Needed by reqwest's stream feature
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
config = "0.15.9"
thiserror = "2.0.12"
async-trait = "0.1.87"

# Action macros
action_macros = { path = "action_macros" }
ctor = "0.4.0"

[dev-dependencies]
mockito = "1.7.0"
pretty_assertions = "1.4.1"
rstest = "0.25.0"
test-log = { version = "0.2.17", features = ["trace"] }
