[package]
name = "hearth"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
futures = "0.3" # Needed by reqwest's stream feature
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
thiserror = "2.0"
async-trait = "0.1"
cron = "0.15.0"
chrono = "0.4"
humantime-serde = "1.1.1"
sunrise = "2.1"

# Action macros
action_macros = { path = "action_macros" }
ctor = "0.6"

[dev-dependencies]
cargo-llvm-cov = "0.6"
mockito = "1.7"
pretty_assertions = "1.4"
rstest = "0.26"
test-log = { version = "0.2", features = ["trace"] }
